Stub about page. Initial styling to 404 page. Photography scroller galery added.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
 
+*:focus {
+    outline: none; 
+}
+
 html, body, #___gatsby {
 	height: 100%;
 	line-height: normal;
-
 }
 
 #gatsby-focus-wrapper {
