--- a/src/components/Landing/Landing.module.css
+++ b/src/components/Landing/Landing.module.css
@@ -7,7 +7,7 @@
 }
 
 .Landing h1 {
-    font-family: 'Helvetica';
+    font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 	font-weight: normal;
 	font-size: 75px;
 	margin: 0;
