--- a/src/components/Navigation/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItem/NavigationItem.module.css
@@ -6,7 +6,7 @@
 	margin-bottom: 0;
 	font-weight: bold;
 	color: #333333;
-	font-family: 'Helvetica';
+	font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 	font-size: 12px;
 	margin-right: 15px;
 	box-shadow: none;
