--- a/src/components/Landing/Landing.module.css
+++ b/src/components/Landing/Landing.module.css
@@ -9,16 +9,16 @@
 .Landing h1 {
     font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 	font-weight: normal;
-	font-size: 75px;
+	font-size: 4.7em;
 	margin: 0;
 	padding-bottom: 10px;
 	margin-bottom: 7px;
-	border-bottom: 2px solid #8d0018
+	border-bottom: 3px solid #8d0018;
 }
 
 .Landing h3 {
 	font-family: 'Comfortaa', cursive;
-	font-size: 35px;
+	font-size: 2.2em;
     font-weight: normal;
     margin: 0;
 }
