--- a/src/components/Navigation/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItem/NavigationItem.module.css
@@ -7,7 +7,7 @@
 	font-weight: bold;
 	color: #333333;
 	font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-	font-size: 12px;
+	font-size: 0.75em;
 	margin-right: 15px;
 	box-shadow: none;
 }
