--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,6 +1,14 @@
+.container {
+        flex-grow: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+}
+
 .About {
     text-align: center;
-    margin-top: 50px;
+    margin-top: 15px;
     display: flex;
     flex-direction: column;
     align-items: center;
