--- a/src/components/Landing/Landing.module.css
+++ b/src/components/Landing/Landing.module.css
@@ -9,11 +9,12 @@
 .Landing h1 {
     font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 	font-weight: normal;
-	font-size: 4.7em;
+	font-size: 4.4em;
 	margin: 0;
 	padding-bottom: 10px;
 	margin-bottom: 7px;
 	border-bottom: 3px solid #8d0018;
+	text-shadow: 1px 2px rgba(0,0,0,0.1);
 }
 
 .Landing h3 {
