--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -8,10 +8,14 @@
 
 .About {
     text-align: center;
-    margin-top: 15px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 50%;
+    background-color: rgba(237, 235, 224, .5);
+    border: 1px solid rgba(0,0,0,0.2);
+    border-radius: 15px;
+    color: #333333;
 }
 
 .About h1 {
@@ -45,7 +49,7 @@
 .links {
     margin: 15px 10px;
     display: flex;
-    min-width: 20%;
+    min-width: 40%;
     justify-content: space-evenly;
 }
 
@@ -56,5 +60,11 @@
 @media (max-width: 660px) {
     .links {
         width: 40%;
+    }
+
+    .About {
+        width: 100%;
+        border: none;
+        background-color: transparent;
     }
 }
