Removed unused files. Created custom icon. Added SEO tab titles. Small styling changes. Navbar fixed position when scrolling.

--- a/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -5,6 +5,11 @@
     align-items: center;
     justify-content: space-between;
     border-bottom: 2px solid #f6f5e9;
+
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    z-index: 1000;
 }
 
 .Toolbar h2 {
