--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -13,9 +13,9 @@
     align-items: center;
     width: 50%;
     background-color: rgba(237, 235, 224, .5);
-    border: 1px solid rgba(0,0,0,0.2);
-    border-radius: 15px;
+    border-radius: 10px;
     color: #333333;
+    margin-top: 50px;
 }
 
 .About h1 {
