--- a/src/components/Landing/Landing.module.css
+++ b/src/components/Landing/Landing.module.css
@@ -4,6 +4,7 @@
 	justify-content: center;
 	align-items: center;
 	text-align: center;
+	margin-top: 50px;
 }
 
 .Landing h1 {
@@ -14,7 +15,7 @@
 	padding-bottom: 10px;
 	margin-bottom: 7px;
 	border-bottom: 3px solid #8d0018;
-	text-shadow: 1px 2px rgba(0,0,0,0.1);
+	text-shadow: 3px 3px rgba(0,0,0,0.1);
 }
 
 .Landing h3 {
