--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -4,7 +4,8 @@
     flex-direction: column;
     background-color: #f6f5e9;
     box-shadow: 1px 0.1rem 0.1rem rgba(0,0,0,0.3);
-    margin-bottom: 15px;
+    margin-bottom: 10px;
+    border-radius: 10px;
 }
 
 .imageData {
@@ -12,6 +13,9 @@
     position: relative;
     z-index: 1;
     overflow: hidden;
+    border-radius: 0;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .backgroundImage {
@@ -33,7 +37,7 @@
 .publicationDetails {
     width: 100%;
     height: 100%;
-    background: linear-gradient(to right bottom, rgba(237, 235, 224,.5), rgba(246, 245, 233,.5));
+    background: linear-gradient(to right bottom, rgba(237, 235, 224,.4), rgba(246, 245, 233,.4));
     font-size: 0.75rem;
     font-weight: bold;
     position: absolute;
@@ -119,6 +123,9 @@
     .imageData {
         flex-basis: 40%;
         height: unset;
+        border-radius: 0;
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
     }
 
     .postData {
