--- a/src/containers/Gallery/Gallery.module.css
+++ b/src/containers/Gallery/Gallery.module.css
@@ -1,10 +1,12 @@
 .Description {
-    margin: 15px 0;
     line-height: normal;
     font-size: 1em;
     color: #333333;
     font-family: 'Helvetica Neue', cursive;
     text-align: center;
+    font-style: italic;
+    margin-top: 75px;
+    margin-bottom: 25px;
 }
 
 .on {
